--- a/.github/workflows/sanity-check.yaml
+++ b/.github/workflows/sanity-check.yaml
@@ -15,8 +15,6 @@ jobs:
 
       - name: Lint check
         run: |
-          npm run lint
+          npm run stylelint
 
-      - name: Lint check
-        run: |
-          npm run test
+     
