--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "serve": "webpack-dev-server --mode development",
     "build:prod": "webpack",
-    "stylelint": "stylelint \"src/**/*.css\"",
+    "stylelint":"stylelint \"src/**/*.css\"",
     "stylelint:fix": "stylelint \"src/**/*.css\""
   },
   "author": "NBhey",
@@ -16,7 +16,6 @@
     "css-loader": "^7.1.1",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "jest": "^29.7.0",
     "style-loader": "^4.0.0",
     "stylelint": "^16.3.1",
     "stylelint-config-standard-scss": "^13.1.0",
