--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "test",
     "serve": "webpack-dev-server --mode development",
-    "build:prod": "webpack",
+    "build:prod": "webpack --mode production",
     "stylelint":"stylelint \"src/**/*.css\"",
     "stylelint:fix": "stylelint \"src/**/*.css\""
   },
