--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "serve": "webpack-dev-server --mode development",
-    "build:prod": "webpack",
-    "stylelint":"stylelint \"src/**/*.css\"",
+    "dev": "webpack-dev-server --mode development --live-reload",
+    "build:prod": "webpack --mode production",
+    "stylelint": "stylelint \"src/**/*.css\"",
     "stylelint:fix": "stylelint \"src/**/*.css\""
   },
   "author": "NBhey",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.1",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
