--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "serve": "webpack-dev-server --mode development",
+    "dev": "webpack-dev-server --mode development",
     "build:prod": "webpack --mode production",
     "stylelint":"stylelint \"src/**/*.css\"",
     "stylelint:fix": "stylelint \"src/**/*.css\""
